{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 2678,
  "lineage": "30762c50-5ce8-c1db-7bee-f4535e024272",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "cloud_store",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.154.1.190",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-01T13:03:19.081-07:00",
            "id": "projects/gcloud-342810/regions/europe-west2/addresses/cloud-store",
            "name": "cloud-store",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcloud-342810",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/addresses/cloud-store",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/subnetworks/main"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "cloud_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.154.1.253",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-01T13:03:19.011-07:00",
            "id": "projects/gcloud-342810/regions/europe-west2/addresses/cloud-vpn",
            "name": "cloud-vpn",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcloud-342810",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/addresses/cloud-vpn",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/subnetworks/main"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.246.5.184",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-01T13:02:33.485-07:00",
            "id": "projects/gcloud-342810/regions/europe-west2/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gcloud-342810",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external-ssh-cloud-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-01T13:02:55.665-07:00",
            "deny": [],
            "description": "Creates firewall rule for external ssh access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcloud-342810/global/firewalls/external-ssh",
            "log_config": [],
            "name": "external-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "priority": 1000,
            "project": "gcloud-342810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/firewalls/external-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "cloud-vpn"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2094"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-06-01T13:02:55.620-07:00",
            "deny": [],
            "description": "Creates firewall rule for external vpn access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcloud-342810/global/firewalls/external-vpn",
            "log_config": [],
            "name": "external-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "priority": 1000,
            "project": "gcloud-342810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/firewalls/external-vpn",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "cloud-vpn"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "media-wiki",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-01T13:02:55.557-07:00",
            "deny": [],
            "description": "Creates firewall rule for internal media wiki access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcloud-342810/global/firewalls/internal-wiki",
            "log_config": [],
            "name": "internal-wiki",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "priority": 1000,
            "project": "gcloud-342810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/firewalls/internal-wiki",
            "source_ranges": [
              "10.154.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "cloud-store"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-01T13:02:55.562-07:00",
            "deny": [],
            "description": "Creates firewall rule for internal ssh access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcloud-342810/global/firewalls/internal-ssh",
            "log_config": [],
            "name": "internal-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "priority": 1000,
            "project": "gcloud-342810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/firewalls/internal-ssh",
            "source_ranges": [
              "10.154.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cloud-store",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/zones/europe-west2-c/disks/cloud-store"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcloud-342810/zones/europe-west2-c/instances/cloud-store",
            "instance_id": "7708652927161366780",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "HlG2ZnCuu28=",
            "name": "cloud-store",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
                "network_ip": "10.154.1.190",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/subnetworks/main",
                "subnetwork_project": "gcloud-342810"
              }
            ],
            "project": "gcloud-342810",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/zones/europe-west2-c/instances/cloud-store",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloud-store"
            ],
            "tags_fingerprint": "jWEVfI4N7hQ=",
            "zone": "europe-west2-c"
          },
          "dependencies": [
            "google_compute_address.cloud_store",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cloud-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/zones/europe-west2-c/disks/cloud-vpn"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcloud-342810/zones/europe-west2-c/instances/cloud-vpn",
            "instance_id": "2606780324146477308",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+wn2fvCoyB7MCl8yf54fiKXKI48VV/Sd6PyVGy8+3ET7xUkvBToc/SM8gOLXlUW1NKtf+pm9OLARCOXQc47AEot3a+q6cKg9EDfW5fLJOJlTf5BjCCmSUnC+M1xJOlsqWGLBAWmgXFwXEIOSlTF0fShKcDGoEcNOOf/0lDRKLU1XZ24oJSxw1NZv7BkusClN48gEv9apwJr7KhladTw5CGkOsbNAu1WD5kNQMknlE3vaujH4SG/ENCnrip8zIY98xzZiyb8wvTEVr+yCsykmqsWZo0swo44zYPQGjzXHRrdQnwPG2d8pxaAFFUgnEuXB/8fTw9q8rSODtBFfcZj30f7oq/jwRLs6Rd2XOxMOjVwtPNTta6jI0Q1qpqYi7QwrM0twHqttlmz/f9WeKypT6WP0a5qS/eLiKE5L4DzNURmCF [...]
            },
            "metadata_fingerprint": "PxF9ADLraZ4=",
            "name": "cloud-vpn",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.5.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
                "network_ip": "10.154.1.253",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/subnetworks/main",
                "subnetwork_project": "gcloud-342810"
              }
            ],
            "project": "gcloud-342810",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/zones/europe-west2-c/instances/cloud-vpn",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloud-vpn"
            ],
            "tags_fingerprint": "mH4bEoGdKq0=",
            "zone": "europe-west2-c"
          },
          "dependencies": [
            "google_compute_address.cloud_vpn",
            "google_compute_address.static",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcloud-342810/global/networks/cloud-lab",
            "mtu": 1500,
            "name": "cloud-lab",
            "project": "gcloud-342810",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpn-tunnel-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.8.0.0/24",
            "id": "projects/gcloud-342810/global/routes/vpn-tunnel-route",
            "name": "vpn-tunnel-route",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.154.1.253",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1,
            "project": "gcloud-342810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/routes/vpn-tunnel-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-06-01T13:02:55.815-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcloud-342810/regions/europe-west2/routers/cloud-router",
            "name": "cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "project": "gcloud-342810",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/routers/cloud-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcloud-342810/europe-west2/cloud-router/cloud-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "cloud-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcloud-342810",
            "region": "europe-west2",
            "router": "cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T13:02:56.539-07:00",
            "gateway_address": "10.154.1.1",
            "id": "projects/gcloud-342810/regions/europe-west2/subnetworks/main",
            "ip_cidr_range": "10.154.1.0/24",
            "name": "main",
            "network": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/global/networks/cloud-lab",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcloud-342810",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcloud-342810/regions/europe-west2/subnetworks/main",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}